[package]
name = "unify"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
reqwest = { version = "0.12.5", features = ["json", "default-tls"] }
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
log = "0.4.17"
dotenv = "0.15.0"
thiserror = "1.0.38"
env_logger = "0.10.0"

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1.25.0", features = ["full"] }
